# DaGameThatIsFun

./: LICENSE  Launcher.bat  README.md  app.py  game.py  prompt.txt  requirements.txt
Docs/: architecture_generale.md  backend_python.md  frontend_javascript.md  installation_deploiement.md  ressources_assets.md
Files/: button_config.json  create_lobby.html  credits.html  index.html  join_lobby.html  waiting_room.html
Files/Games/credits/: credits.js
Files/Games/draw-contest/: credits.css  draw-contest.html  script.js  styles.css  word-list.json
Files/Games/general/: credits.js  players.js
Files/Games/loading/: loading.html  script.js  styles.css
Files/Games/pictionary/: credits.css  guess-list.json  pictionary.html  script.js  styles.css
Files/Games/quiz-rush/: credits.css  quiz-list.json  quiz-rush.html  script.js  style.css
Files/Javascript/: avatar.js  command_list.json  credits.js  index.js  lobby_commands.js  lobby_manager.js  lobby_redirection.js  waiting_room.js
Files/Javascript/scripts/: cancel-countdown.js  lobby-deleted.js  redirect.js  start-countdown.js
Files/static/: lobby_style.css  mobile_style.css  style.css
Python/: Cargo.toml  app.py  get_ip.py  lobby_viewer.py  models.py  prompt.txt  prompt_generator.py  server.py
Python/System/: lobby.py  models.py  qr.py  server.py  utils.py
Python/src/: main.rs  models.rs
Source/: requirements.txt
Source/Files/: create_lobby.html  credits.html  index.html  join_lobby.html  waiting_room.html
Source/Files/Javascript/: avatar.js  button_controls.js  create_lobby.js  index.js  join_lobby.js  (+2 more)
(+14 files in other folders)
