[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
lazy_static = "1.4.0"
qrcode = { version = "0.12.0", features = ["svg"] }
local-ip-address = "0.5.1"